Prevent long paths from stretching page
* Fix hits table layout, limit path to column to page width and break
paths when we need to
* Create box-sizing mixin

--- a/app/assets/stylesheets/hits.css.scss
+++ b/app/assets/stylesheets/hits.css.scss
@@ -1,3 +1,5 @@
+@import 'bootstrap/_variables';
+@import 'mixins';
 @import 'theme';
 
 .bar-chart-row {
@@ -17,7 +19,22 @@
   background-color: $badHTTPStatusColor;
 }
 
+.hits {
+  table-layout: fixed;
+}
+
+.status {
+  width: $gridColumnWidth;
+  @include box-sizing();
+}
+
+.count {
+  width: $gridColumnWidth * 2;
+  @include box-sizing();
+}
+
 .path {
+  word-wrap: break-word;
   position: relative;
   z-index: 1;
 }
